--- a/teste.html
+++ b/teste.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-<h1>minha primeira pagina</h1>
-<p>meu nome é andressa e essa é a minha primeira pagina de um site. </p>
-<p> é uma pagina simpres criada como parte da ativadede. </p>
+<h1> esta é a minha primeira pagina</h1>
+<p>meu nome é andressa </p>
+<p>>essa é a minha primeira pagina de um site. </p>
+<p> é uma pagina simpres criada como parte de uma ativadede do talento tech. </p>
 </body>
 </html>
 
