--- a/teste.html
+++ b/teste.html
@@ -7,7 +7,7 @@
 
 <h1> esta é a minha primeira pagina</h1>
 <p>meu nome é andressa </p>
-<p>ssa é a minha primeira pagina de um site. </p>
+<p> essa é a minha primeira pagina de um site. </p>
 <p> é uma pagina simpres criada como parte de uma ativadede do talento tech. </p>
 </body>
 </html>
